--- a/tractatus.org
+++ b/tractatus.org
@@ -1,3 +1,6 @@
+#+TITLE: Tractatus Logico-Philosophicus
+#+AUTHOR: Ludwig Wittgenstein
+
 * 1 The world is everything that is the case.
 ** 1.1 The world is the totality of facts, not of things.
 *** 1.11 The world is determined by the facts, and by these being all the facts.
