--- a/chapters_a4.tex
+++ b/chapters_a4.tex
@@ -135,14 +135,12 @@ $if(lang)$
 \fi
 $endif$
 
-$if(unnumbered-chapters)$
-  \usepackage[pagestyles]{titlesec}
-  \newcommand{\sectionbreak}{\clearpage}
-  \titleformat{\chapter}[display]{\normalfont\bfseries}{}{0pt}{\Huge}
-  \newpagestyle{mystyle}
-  {\sethead[\thepage][][\chaptertitle]{}{}{\thepage}}
-  \pagestyle{mystyle}
-$endif$
+\usepackage[pagestyles]{titlesec}
+\newcommand{\sectionbreak}{\clearpage}
+\titleformat{\chapter}[display]{\normalfont\bfseries}{}{0pt}{\Huge}
+\newpagestyle{mystyle}
+{\sethead[\thepage][][]{}{}{\thepage}}
+\pagestyle{mystyle}
 
 $if(title)$
 \title{$title$$if(subtitle)$\\\vspace{0.5em}{\large $subtitle$}$endif$}
